# TheGuildGenesis

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  CONTRIBUTION.md  CONTRIBUTION_TOKEN.md  LICENSE  Makefile  README.md  dev.sh  docker-compose.db-only.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  flake.nix  justfile  pr_description.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
backend/.sqlx/: query-14af4de80324b022defcc022ae84a4956cb9189f2baed776e733f138fb7ccb3e.json  query-177358fec702a5f78c1ff0dbd5eed42fa868487c84ebef42dfcf695e9ce42725.json  query-21d41f830b745d6af6e1319ee36ef0bff9dcf5f133ecb58bf2706104e55d3490.json  query-25dd1d31b19c5826968a9729d064b22a58f6b0ffa6f32d51a61a83bab2e74959.json  query-5b21241db59e84080d36c67abb309e28f8b95cedbd9da3b5a7f2b5ced0505462.json  query-5c8b9a2a1431a71613c6fd9d06e7f1dc430db4e2256fad1d38a33e31ef536810.json  query-7acd8c9bc567ef80f66a38130bb708068882a4559856e38e6231405e9acc5a74.json  query-8120a938d5a6a7ea4408e50c99e9fc88b86f34a7c58b8bc14c14eaf0754b51ad.json  query-8310e232b4c89fdd962e21fcf659f7fb50a0497388efd4fefff42391278f7fc9.json  query-a478268fcaba59a09995733f4058225baff0216a62ab2bc7a4a5dc2324ecf067.json  query-b521c6c7f362753693d7059c6815de444a5c6aadc1a9950d9d71f49f52dee768.json  query-c70becfbfc2934ce1a453e9f1ef169e252a1f7395ecf242f366fe44817fe11c7.json  query-d23893061ef0e487ff20489fc5f4640e73d70dde72e7412ca265b30db5ac4249.json  query-d79097da6ad7c82305d728beb248ed4aab6d7f3a5f5d88ae151cb6c21666761d.json  query-e4c05cdcfce8dddaf75c30de7e20d020c23a6650ec0bac46c56c30bc3d9c8142.json  query-fd6f338fcae9c81fbf1d7590574fa950a74fa68daabb48c80a0a7754e4066987.json  query-fe47a9ce9d61692552d87b31b3596ded14179f08a15e3235d3e95b95964bd2c7.json
backend/keys/: private.pem  public.pem
backend/migrations/: 001_initial_schema.sql  002_add_github_login.sql  003_add_nonces.sql  003_create_profiles_table.sql  004_add_refresh_tokens.sql
backend/src/: database.rs  lib.rs  main.rs  main_dev.rs
backend/src/application/: mod.rs
backend/src/application/commands/: create_profile.rs  get_all_profiles.rs  get_login_nonce.rs  get_profile.rs  login.rs  logout.rs  mod.rs  refresh_token.rs  update_profile.rs
backend/src/application/dtos/: auth_dtos.rs  badge_dtos.rs  mod.rs  profile_dtos.rs
backend/src/application/queries/: get_login_nonce.rs  mod.rs
backend/src/application/services/: auth_service.rs  badge_service.rs  mod.rs  profile_service.rs
backend/src/domain/: mod.rs
backend/src/domain/entities/: badge.rs  mod.rs  profile.rs  user.rs
backend/src/domain/repositories/: badge_repository.rs  mod.rs  profile_repository.rs  refresh_token_repository.rs  user_repository.rs
backend/src/domain/services/: auth_service.rs  jwt_service.rs  mod.rs
backend/src/domain/value_objects/: mod.rs  nonce.rs  wallet_address.rs
backend/src/handlers/: auth.rs  badges.rs  dev.rs  mod.rs  profiles.rs
backend/src/infrastructure/: jwt.rs  mod.rs
backend/src/infrastructure/repositories/: mod.rs  postgres_badge_repository.rs  (+3 more)
backend/src/middleware/: mod.rs
backend/src/models/: mod.rs
backend/src/presentation/: api.rs  handlers.rs  middlewares.rs  mod.rs
backend/tests/: integration_github_handle.rs  profile_tests.rs  simple_tests.rs
indexer/: Cargo.toml  Dockerfile
indexer/.sqlx/: query-c8d8e35c7b8df20719b3bfd0d7d6f2178cb0e310e7decfaf23857756f7d6202e.json
indexer/contracts/: activity_token_abi.json
indexer/migrations/: 001_initial_schema.sql
indexer/src/: main.rs
indexer/src/presentation/: api.rs  mod.rs
notebooks/: .gitignore  00_welcome.ipynb  01_github_issues.ipynb  README.md  contribution-tokens-latest.json  env.example  pyproject.toml  requirements.txt  setup.sh
(+202 files in other folders)
