[package]
name = "guild-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guild-backend-dev"
path = "src/main_dev.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any", "chrono", "uuid"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Crypto
siwe = "0.6"
ethers = { version = "2.0", features = ["rustls"] }
sha3 = "0.10"

# Pin problematic dependencies to avoid edition 2024
base64ct = "=1.7.3"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"

# Environment
dotenvy = "0.15"