[package]
name = "guild-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "guild_backend"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any", "chrono", "uuid"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Crypto
siwe = "0.6"
ethers = { version = "2.0", features = ["rustls"] }
sha3 = "0.10"
jsonwebtoken = "9.3"

# Pin problematic dependencies to avoid edition 2024
base64ct = "1.7.3"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"

# Environment
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }