[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "guild-indexer"
path = "src/main.rs"   

[[bin]]
name = "migrate-indexer"
path = "src/bin/migrate.rs"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version =  "0.3.20", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "any", "chrono", "uuid"] }
tracing = "0.1.41"
anyhow = "1.0.100"
axum = { version = "0.8", features = ["macros"] }
async-trait = "0.1.89"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy = "1.0.36"
